@@ -1,8 +1,11 @@
 2012-02-07  Lars Ingebrigtsen  <larsi@gnus.org>
 
-	* nnimap.el (nnimap-transform-headers): Removed unused variable.
+	* nnimap.el (nnimap-transform-headers): Remove unused variable.
+	(nnimap-transform-headers): Fix parsing BODYSTRUCTURE elements that
+	have newlines within the strings, and where the UID comes after the
+	BODYSTRUCTURE element (bug#10537).
 
-	* shr-color.el (shr-color-set-minimum-interval): Renamed to add prefix
+	* shr-color.el (shr-color-set-minimum-interval): Rename to add prefix
 	(bug#10732).
 
 	* shr.el (shr-insert-document): Add doc string.
